--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "7.8.1",
-    "tslib": "2.6.0",
-    "zone.js": "0.13.1",
+    "@angular/animations": "16.1.4",
+    "@angular/common": "16.1.4",
+    "@angular/compiler": "16.1.4",
     "@angular/core": "16.1.4",
     "@angular/forms": "16.1.4",
-    "@types/jasmine": "4.0.3",
-    "@angular/common": "16.1.4",
-    "@angular/router": "16.1.4",
-    "@angular/compiler": "16.1.4",
-    "@angular/animations": "16.1.4",
     "@angular/platform-browser": "16.1.4",
-    "@angular/platform-browser-dynamic": "16.1.4"
+    "@angular/platform-browser-dynamic": "16.1.4",
+    "@angular/router": "16.1.4",
+    "@types/jasmine": "4.0.3",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.0.2",
+    "rxjs": "7.8.1",
+    "tslib": "2.6.0",
+    "zone.js": "0.13.1"
   },
   "scripts": {
     "ng": "ng",
