--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,10 @@
             "outputPath": "dist/demo",
             "scripts": [],
             "styles": [
-              "src/global_styles.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "src/styles.scss"
             ],
             "tsConfig": "src/tsconfig.app.json"
           }
@@ -56,13 +59,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "exclude": [
-              "**/node_modules/**"
-            ],
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ]
+            "exclude": ["**/node_modules/**"],
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"]
           }
         },
         "serve": {
@@ -80,17 +78,12 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "karmaConfig": "src/karma.conf.js",
             "main": "src/test.ts",
             "polyfills": [],
             "scripts": [],
-            "styles": [
-              "styles.css"
-            ],
+            "styles": ["styles.css"],
             "tsConfig": "src/tsconfig.spec.json"
           }
         }
