--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "src/styles.scss"
+              "src/global_styles.css"
             ],
             "tsConfig": "src/tsconfig.app.json"
           }
