--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.1.4",
-    "@angular/common": "16.1.4",
-    "@angular/compiler": "16.1.4",
-    "@angular/core": "16.1.4",
-    "@angular/forms": "16.1.4",
-    "@angular/platform-browser": "16.1.4",
-    "@angular/platform-browser-dynamic": "16.1.4",
-    "@angular/router": "16.1.4",
-    "@types/jasmine": "4.0.3",
-    "primeicons": "^6.0.1",
-    "primeng": "^16.0.2",
-    "rxjs": "7.8.1",
-    "tslib": "2.6.0",
-    "zone.js": "0.13.1"
+    "@angular/animations": "15.2.1",
+    "@angular/cdk": "15.2.1",
+    "@angular/common": "15.2.1",
+    "@angular/compiler": "15.2.1",
+    "@angular/compiler-cli": "15.2.1",
+    "@angular/core": "15.2.1",
+    "@angular/forms": "15.2.1",
+    "@angular/localize": "15.2.1",
+    "@angular/platform-browser": "15.2.1",
+    "@angular/platform-browser-dynamic": "15.2.1",
+    "@angular/router": "15.2.1",
+    "@types/jasmine": "4.3.1",
+    "@types/node": "12.20.55",
+    "primeicons": "6.0.1",
+    "primeng": "15.2.0",
+    "rxjs": "7.5.7",
+    "tslib": "2.5.0",
+    "typescript": ">=4.8.2 <5.0",
+    "zone.js": "0.12.0"
   },
   "scripts": {
     "ng": "ng",
